# intel-extension-for-transformers

./: .dockerignore  .gitignore  .gitmodules  .gitpod.dockerfile  .gitpod.yml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  env_gpu.sh  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  run-gptq-example.sh  security.md  setup.py  setup_env_gpu.sh  third_party_programs.txt  versions.html
examples/: CMakeLists.txt
examples/.config/: engine_deploy.json  ipex_deploy.json  model_params_baremetal.json  model_params_pytorch.json  model_params_tensorflow.json  neural_speed_deploy.json  onnx_optimize.json  pytorch_optimize.json  tensorflow_optimize.json  vllm_deploy.json  vllm_optimize.json
examples/01_basic_gemm/: CMakeLists.txt  basic_gemm.cpp
examples/01_gemm_universal/: CMakeLists.txt  gemm_universal.cpp
examples/02_basic_brgemm/: CMakeLists.txt  basic_brgemm.cpp
examples/02_basic_gemm/: CMakeLists.txt  basic_gemm.cpp
examples/03_gemm_relu_bias/: CMakeLists.txt  gemm_relu_bias.cpp
examples/04_brgemm_polynomial/: CMakeLists.txt  brgemm_polynomial.cpp  brgemm_polynomial.hpp
examples/04_gemm_polynomial/: CMakeLists.txt  gemm_polynomial.cpp  gemm_polynomial.hpp
examples/05_batch_gemm/: CMakeLists.txt  batch_gemm.cpp  batch_gemm.hpp
examples/06_gemm_softmax/: gemm_softmax.cpp
examples/06_splitk_brgemm/: CMakeLists.txt  splitk_brgemm.cpp
examples/07_gemm_softmax/: CMakeLists.txt  gemm_softmax.cpp  softmax.hpp
examples/07_multi_layer_perceptron/: CMakeLists.txt  multi_layer_perceptron.cpp  multi_layer_perceptron.hpp
examples/08_multi_layer_perceptron/: multi_layer_perceptron.cpp
examples/08_scaled_dot_product_attention/: CMakeLists.txt  scaled_dot_product_attention.cpp  softmax.hpp
examples/09_gate_recurrent_unit/: gate_recurrent_unit.cpp  kernel_func.hpp
examples/09_multi_head_attention/: CMakeLists.txt  multi_head_attention.cpp  softmax.hpp
examples/09_scaled_dot_product_attention/: scaled_dot_product_attention.cpp
examples/09_scaled_dot_production_attention/: CMakeLists.txt  scaled_dot_production_attention.cpp
examples/10_gate_recurrent_unit/: CMakeLists.txt  gate_recurrent_unit.cpp  kernel_func.hpp
examples/10_gemm_large_n/: gemm_large_n.cpp
examples/11_gemm_large_n/: CMakeLists.txt  gemm_large_n.cpp
examples/11_streamK_gemm/: CMakeLists.txt  streamK_gemm.cpp
examples/11_stream_k_gemm/: CMakeLists.txt  stream_k_gemm.cpp
examples/E2E-solution/DLSA/: README.md  requirements.txt  run_benchmark.sh  run_dlsa.py
examples/GenAI/: README.md
examples/GenAIExamples/: README.md
examples/deploy/nlp_executor/: common.py  details.csv  launcher.py
examples/deployment/: README.md
examples/deployment/ipex/: common.py
examples/deployment/neural_engine/: README.md  benchmark_and_acc.py  common.py  launcher.py
examples/habana/: README.md  gaudi_spawn.py  requirements.txt  run_generation.py  run_llama.sh  run_measure.sh  run_ppl.sh  run_tp.sh  utils.py
examples/habana/quantization_config/: act_maxabs_hw_weights_pcs_maxabs_pow2_quant.json  kv_cache.json  maxabs_measure.json  maxabs_measure_include_outputs.json  maxabs_quant.json  maxabs_quant_mixtral.json  unit_scale_quant.json
examples/habana/streaming_llm/: README.md  eval_bf16_streaming.sh  eval_fp8_streaming.sh  eval_llama2_13b_bf16_streaming.sh  eval_yi_34b_200k_bf16_streaming.sh  eval_yi_34b_200k_fp8_streaming.sh  perplexity.py  plot_perplexity.py  run_bf16_streaming.sh  run_fp8_streaming.sh  run_streaming_llm.py  run_yi_34b_200k_bf16_streaming.sh  run_yi_34b_bf16_streaming.sh  run_yi_34b_fp8_streaming.sh
examples/huggingface/neural_speed/: README.md  requirements.txt  run_accuracy.py  run_autoround_example.py  run_autoround_qdq.py  run_inference.py  runtime_acc.py  runtime_example.py
examples/huggingface/onnxruntime/: README.md  optimization_README.md
examples/huggingface/pytorch/: README.md  deployment_README.md  neural_engine_README.md  optimization_README.md
examples/mlperf/neural_speed/: README.md
examples/modelscope/: README.md  requirements.txt  run_modelscope_example.py
examples/streaming_llm/gaudi/: run_streaming_llm.py
examples/vllm/: README.md  requirement.txt  run_tuning.sh  vllm_acceleration_example.py
intel_extension_for_transformers/backends/neural_engine/: CMakeLists.txt  CMakePresets.json  oneDNN-THIRD-PARTY-PROGRAMS
intel_extension_for_transformers/qbits/: CMakeLists.txt  __init__.py  qbits.cpp
intel_extension_for_transformers/qbits/dispatcher/: CMakeLists.txt  neural_speed.cmake
intel_extension_for_transformers/qbits/qbits_ut/: test_matmul.py  test_packq.py  test_weightonly.py
intel_extension_for_transformers/qbits/src/: dropout.cpp
intel_extension_for_transformers/transformers/runtime/: CMakeLists.txt  CMakePresets.json  __init__.py
nlp_toolkit/backends/neural_engine/: CMakeLists.txt  CMakePresets.json
tests/integration/: CMakeLists.txt
tests/integration/data_transformer/: CMakeLists.txt  common.hpp  kernel_func.hpp  main.cpp
tests/integration/default_config/: CMakeLists.txt  gemm_kernel_genx.cpp
tests/integration/gemm/: CMakeLists.txt
tests/integration/layer_norm/: CMakeLists.txt
tests/integration/limitation/: main.cpp
tests/integration/row_reduction/: CMakeLists.txt  common.hpp  kernel_func.hpp  main.cpp
tests/integration/sg_dropout_op/: common.hpp  kernel_func.hpp  main.cpp
tests/integration/softmax/: CMakeLists.txt  common.hpp  softmax_bwd.cpp  softmax_bwd_kernel.hpp  softmax_fwd.cpp  softmax_fwd_kernel.hpp
tests/integration/vector_add/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/add_c/: CMakeLists.txt  common.hpp  kernel_func.hpp  main.cpp
tests/unit/bit_mask_manipulation/: CMakeLists.txt  common.hpp  kernel_func.hpp  main.cpp
tests/unit/block_load_store/: CMakeLists.txt  common.hpp  kernel_func.hpp  main.cpp
tests/unit/buff_compare/: CMakeLists.txt  main.cpp
tests/unit/epilogue_tile_op/: CMakeLists.txt  common.hpp  kernel_func.hpp  main.cpp
tests/unit/exp_inv_sqrt_tanh/: common.hpp  (+3 more)
(+10985 files in other folders)
