include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR})

add_subdirectory(01_basic_gemm)
add_subdirectory(02_basic_gemm)
add_subdirectory(03_gemm_relu_bias)
add_subdirectory(04_gemm_polynomial)
add_subdirectory(05_batch_gemm)
add_subdirectory(06_gemm_softmax)
add_subdirectory(07_multi_layer_perceptron)
add_subdirectory(08_scaled_dot_product_attention)
add_subdirectory(09_gate_recurrent_unit)
add_subdirectory(10_gemm_large_n)
add_subdirectory(11_streamK_gemm)
